# hope-smart-export

./: .bumpversion.cfg  .gitignore  CHANGES  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
docs/src/: index.md  install.md
src/hope_smart_export/: admin.py  apps.py  exporters.py  models.py  utils.py
src/hope_smart_export/exporters/: __init__.py  base.py  csv.py  registry.py  txt.py  xls.py
src/hope_smart_export/migrations/: 0001_initial.py
src/hope_smart_export/templates/admin/hope_smart_export/: action_form.html  configure.html  test.html
tests/: .coveragerc  conftest.py  test_admin.py  test_admin_cat.py  test_admin_cfg.py  test_export.py  test_export_csv.py  test_export_xls.py  test_models.py
tests/demoapp/demo/: factories.py  settings.py
