[project]
name = "hope-smart-export"
version = "0.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "django-admin-extra-buttons>=1.5.8",
    "django-adminactions>=2.3.0",
    "django-strategy-field>=3.1.0",
    "xlsxwriter>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/unicef/hope-smart-export"
Documentation = "https://unicef.github.io/hope-smart-export/"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.36",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocstrings-python",
]


[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "bump2version>=1.0.1",
    "django-webtest>=1.9.12",
    "django>=4,<6",
    "factory-boy>=3.3.1",
    "flake8>=7.1.1",
    "ipython>=8.27.0",
    "isort>=5.13.2",
    "openpyxl>=3.1.5",
    "pdbpp>=0.10.3",
    "pre-commit>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest-echo>=1.7.3",
    "pytest>=8.3.3",
]




[tool.isort]
profile = "black"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | snapshots
)/
'''
